TaskManager/force-app/main/default/objects/Assigned_task__c/Assigned_task__c.object-meta.xml
<CustomObject>
    <label>Assigned task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assigned tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>