TaskManager/force-app/main/default/objects/Assigned_task__c/fields/Approval_status__c.field-meta.xml
<CustomField>
    <fullName>Approval_status__c</fullName>
    <label>Approval status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unapproved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>