TaskManager/force-app/main/default/objects/Assigned_task__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when record is completed</description>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>