TaskManager/force-app/main/default/objects/Assigned_task__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Assigned tasks</relationshipLabel>
    <relationshipName>Assigned_tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>