TaskManager/force-app/main/default/objects/Assigned_task__c/fields/Task_status__c.field-meta.xml
<CustomField>
    <fullName>Task_status__c</fullName>
    <label>Task Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>To Be Corrected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>